libtracker-data: Use '|' as separator for title articles.

As suggested in https://bugzilla.gnome.org/show_bug.cgi?id=785146
and following https://bugzilla.gnome.org/show_bug.cgi?id=771348,
change the separator used for common articles.

Translators, apologies for the moving target.